# graph-base

./: Cargo.toml  README.md
src/: lib.rs
src/generator/: hypergraph.rs  mod.rs
src/impls/: hypergraph.rs  mod.rs  standard.rs
src/interfaces/: edge.rs  graph.rs  hypergraph.rs  labeled.rs  mod.rs  typed.rs  vertex.rs
