[package]
name = "graph-base"
version = "0.1.8"
edition = "2021"
license = "MIT"
description = "A Rust library for graph data structures and algorithms"

[workspace]
members = []

[features]
default = []

[dependencies]
lazy_static = "1.5.0"
rand = "0.9.1"
serde = {version = "1.0.219", features = ["derive"]}
